# agnes-tachyon

./: .gitignore  LICENSE  README.md  README_miniverse.md  __init__.py  pyproject.toml
.github/skills/agnes-tachyon-portable/: SKILL.md
.github/skills/agnes-tachyon-portable-frozen/: SKILL.md
.github/skills/agnes-tachyon-portable/assets/: optimized-learner.env
.github/skills/agnes-tachyon-portable/references/: component-map.md  portability-checklist.md  portable-folders.md  reproduction-playbook.md
.github/skills/agnes-tachyon-portable/scripts/: export_agnes_tachyon_bundle.sh  restore_agnes_tachyon_bundle.sh  verify_restored_stack.sh
.github/workflows/: ci.yml
apps/miniverse/my-miniverse/: index.html  package-lock.json  package.json
apps/miniverse/my-miniverse/agents/: README.md  demo.mjs  demo.py  librarian_learn.py  librarian_learn_swift.py  runtime.mjs  runtime.py  serve_ui.py  start_stack.sh  stop_stack.sh  submit-task.mjs  submit_task.py
apps/miniverse/my-world/: command_center.sh  package-lock.json  package.json  server.js  start_operational_stack.sh  stop_operational_stack.sh
docs/: Arquitectura Cognitivo-Computacional para Investigador.md  Arquitectura de Investigación Profunda Local.md  Modelo AGI_ Agnes Tachyon MBTI-Genética.md  QUICKSTART.md
tachyon/: Modelfile.tachyon  __init__.py  __main__.py  brain.py  cli.py  config.py  intent.py  memory.py  miniverse_bridge.py  persona_dataset.py  personality.py  server.py  tools.py  trainer.py  voice.py  watchdog.py
tachyon/frontend/: index.html
tests/: test_cli.py
(+3 files in other folders)
